updated uhl1k link and fixed typo

--- a/src/main/resources/text/help.html
+++ b/src/main/resources/text/help.html
@@ -48,7 +48,7 @@
 </p>
 
 <p>
-    Typewriter is a free software. This means you can modify it and/or distributed as you want. However, you have to keep the license, which <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU GeneralPublic License 3.0</a>, you have to state your changes, keep the program open-source and keep link to the original author, who is <a href="https://github.com/uhl1k">uhl1k</a> (Roman Janků).
+    Typewriter is a free software. This means you can modify it and/or distributed as you want. However, you have to keep the license, which <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License 3.0</a>, you have to state your changes, keep the program open-source and keep link to the original author, who is <a href="https://uhl1k.com/">uhl1k</a> (Roman Janků).
 </p>
 
 <p>
